docs/apache-airflow-providers-amazon/8.21.0/_sources/_api/tests/system/providers/amazon/aws/example_bedrock/index.rst.txt
:py:mod:`tests.system.providers.amazon.aws.example_bedrock`
===========================================================

.. py:module:: tests.system.providers.amazon.aws.example_bedrock


Module Contents
---------------


Functions
~~~~~~~~~

.. autoapisummary::

   tests.system.providers.amazon.aws.example_bedrock.customize_model_workflow
   tests.system.providers.amazon.aws.example_bedrock.delete_provision_throughput



Attributes
~~~~~~~~~~

.. autoapisummary::

   tests.system.providers.amazon.aws.example_bedrock.ROLE_ARN_KEY
   tests.system.providers.amazon.aws.example_bedrock.sys_test_context_task
   tests.system.providers.amazon.aws.example_bedrock.DAG_ID
   tests.system.providers.amazon.aws.example_bedrock.SKIP_LONG_TASKS
   tests.system.providers.amazon.aws.example_bedrock.LLAMA_SHORT_MODEL_ID
   tests.system.providers.amazon.aws.example_bedrock.TITAN_MODEL_ID
   tests.system.providers.amazon.aws.example_bedrock.TITAN_SHORT_MODEL_ID
   tests.system.providers.amazon.aws.example_bedrock.PROMPT
   tests.system.providers.amazon.aws.example_bedrock.TRAIN_DATA
   tests.system.providers.amazon.aws.example_bedrock.HYPERPARAMETERS
   tests.system.providers.amazon.aws.example_bedrock.test_context
   tests.system.providers.amazon.aws.example_bedrock.test_run


.. py:data:: ROLE_ARN_KEY
   :value: 'ROLE_ARN'

   

.. py:data:: sys_test_context_task

   

.. py:data:: DAG_ID
   :value: 'example_bedrock'

   

.. py:data:: SKIP_LONG_TASKS

   

.. py:data:: LLAMA_SHORT_MODEL_ID
   :value: 'meta.llama2-13b-chat-v1'

   

.. py:data:: TITAN_MODEL_ID
   :value: 'amazon.titan-text-express-v1:0:8k'

   

.. py:data:: TITAN_SHORT_MODEL_ID

   

.. py:data:: PROMPT
   :value: 'What color is an orange?'

   

.. py:data:: TRAIN_DATA

   

.. py:data:: HYPERPARAMETERS

   

.. py:function:: customize_model_workflow()


.. py:function:: delete_provision_throughput(provisioned_model_id)


.. py:data:: test_context

   

.. py:data:: test_run

   

